--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
-div{
+div {
   border: 1px solid;
 }
 h1 {
   /* ! This is the font family which is related tto the GOOGLE FONT  link */
   font-family: "Abril Fatface", cursive;
 }
-#cdnm{
-  color:rgb(14, 77, 77);
+#cdnm {
+  color: rgb(14, 77, 77);
 }
 span {
   color: rgb(14, 14, 235);
+}
+section {
+  display: flex;
+}
+.basic-width {
+  width: 50%;
+  padding: 15px;
+}
+.basic-width img {
+  width: 60%;
+  margin-top: 20%;
+}
+.hire-me {
+  text-decoration: none;
+  background-image:linear-gradient(orange, tomato);
+  font-weight: 800;
+  padding: 10px 40px;
+  border-radius: 5px;
 }
