--- a/style.css
+++ b/style.css
@@ -24,8 +24,13 @@ section {
 }
 .hire-me {
   text-decoration: none;
-  background-image:linear-gradient(orange, tomato);
+  background-image: linear-gradient(orange, tomato);
   font-weight: 800;
+  color: white;
   padding: 10px 40px;
   border-radius: 5px;
+}
+.top-banner {
+  background-image: url(./images/top-banner.png);
+  background-repeat:no-repeat;
 }
