--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-div {
+/* div {
   border: 1px solid;
+} */
+body {
+  margin: 0%;
 }
-  body{
-    margin: 0%;
-  }
 h1 {
   /* ! This is the font family which is related tto the GOOGLE FONT  link */
   font-family: "Abril Fatface", cursive;
@@ -16,6 +16,7 @@ span {
 }
 section {
   display: flex;
+  margin-bottom: 75px;
 }
 .basic-width {
   width: 50%;
@@ -36,5 +37,10 @@ section {
 .top-banner {
   background-image: url(./images/top-banner.png);
   background-repeat: no-repeat;
+}
+.bottom-banner {
+  background-image: url(./images/keepz-moving.png);
+  background-repeat: no-repeat;
+  background-position: right;
   
 }
