--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ span {
 .basic-width img {
   width: 60%;
   margin-top: 20%;
-  margin-left: 40px;
+  margin-left: 60px;
+  margin-bottom: 100px;
 }
 .hire-me {
   text-decoration: none;
