--- a/style.css
+++ b/style.css
@@ -54,7 +54,13 @@ span {
 /* ! Applying BOX SHADOW */
 .box-item {
   padding: 30px;
+  border-radius: 10px;
 
   margin: 60px;
   box-shadow: 10px 10px 50px gray;
+}
+.experience {
+  background-image: url(./images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
 }
